# aei-intelligence

./: db.sqlite3  main.py  manage.py  pyproject.toml
aei/: asgi.py  settings.py  urls.py  wsgi.py
aeintelligence/: asgi.py  settings.py  urls.py  wsgi.py
applibrary/: models.py
applibrary/intake/: handle_file.py  intake_pdf.py
applibrary/migrations/: 0001_initial.py
applibrary/templates/: index.html
applibrary/utils/: loggers.py
appmcp/: apps.py
