[project]
name = "aei"
version = "0.1.0"
description = "Building out AEI intelligence"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.2",
    "dotenv>=0.9.9",
    "openai>=1.74.0",
    "opencv-python>=4.11.0.86",
    "polars>=1.27.1",
    "pypdfium2>=4.30.1",
    "python-pptx>=1.0.2",
]
